Making starter component name more generic.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <loanio-app>Loading...</loanio-app>
+    <my-app>Loading...</my-app>
   </body>
 </html>
